Fixed: google sign in on IOS

--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="dareyou">
+  <meta name="google-signin-client_id" content="733772929308-t7tfllh29u9safgh07usf501him99f6t.apps.googleusercontent.com">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
